# kenzie-food

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
data/recipes/: recipes_1.csv
kenzieFood/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: models.py  serializers.py  urls.py  views.py
recipes/management/commands/: seeds.py
recipes/migrations/: 0001_initial.py  0002_auto_20210624_0404.py  0003_auto_20210630_0314.py  0004_auto_20210701_0110.py  0005_auto_20210702_0112.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/management/commands/: seeds_reviews.py
reviews/migrations/: 0001_initial.py
