[tool.poetry]
name = "kenziefood"
version = "0.1.0"
description = ""
authors = ["Enias Oliveira <eniasoliveira27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.12"
djangorestframework = "^3.12.4"
django-silk = "^4.1.0"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
